--- a/phylogenize-report.Rmd
+++ b/phylogenize-report.Rmd
@@ -10,6 +10,7 @@ params:
   abundance_file: "bodysite-averaged.tab"
   metadata_file: "bodysite-metadata.tab"
   phenotype_file: ""
+	dada2_file: ""
   db_version: "midas_v1.0"
   which_phenotype: "prevalence"
   which_envir: "Stool"
@@ -38,20 +39,44 @@ source("plm-functions.R")
 
 # Read in the correct gene presence/absence matrix and corresponding tree files
 if (params$type == "midas") {
-  if (params$db_version == "midas_v1.0") {
-    gene.presence <- readRDS(file.path(DDir, "MIDAS-gene-presence-1.0.rds"))
-    trees <- readRDS(file.path(DDir, "chronos-overall-trees.rds"))
-    phyla <- intersect(names(trees), names(gene.presence))
-    taxa <- lapply(trees, function(x) x$tip.label)
-    gene.to.fxn <- fread(file.path(DDir, "family.functions"),
-                           header = F)
-    colnames(gene.to.fxn) <- c("gene", "function")
-    taxonomy <- data.frame(fread(file.path(DDir,
-                                           "full-taxonomy.csv")),
-                           stringsAsFactors = FALSE)[,-1]
-  } else {
-    stop(paste0("unknown database version ", params$db_version))
-  }
+		SixteenS = FALSE
+	if (params$db_version == "midas_v1.0") {
+		gene.presence <- readRDS(file.path(DDir, "MIDAS-gene-presence-1.0.rds"))
+		trees <- readRDS(file.path(DDir, "MIDAS_1.0-trees.rds"))
+		phyla <- intersect(names(trees), names(gene.presence))
+		taxa <- lapply(trees, function(x) x$tip.label)
+		gene.to.fxn <- fread(file.path(DDir, "family.functions"),
+			header = F)
+		colnames(gene.to.fxn) <- c("gene", "function")
+		taxonomy <- data.frame(fread(file.path(DDir,
+					"full-taxonomy.csv")),
+			stringsAsFactors = FALSE)[,-1]
+	} else if (params$db_version == "midas_v1.2") {
+		gene.presence <- readRDS(file.path(DDir, "MIDAS-gene-presence-1.2.rds"))
+		trees <- readRDS(file.path(DDir, "MIDAS_1.2-trees.rds"))
+		phyla <- intersect(names(trees), names(gene.presence))
+		taxa <- lapply(trees, function(x) x$tip.label)
+		gene.to.fxn <- fread(file.path(DDir, "family.functions"),
+			header = F)
+		colnames(gene.to.fxn) <- c("gene", "function")
+		taxonomy <- data.frame(fread(file.path(DDir,
+					"full-taxonomy.csv")),
+			stringsAsFactors = FALSE)[,-1]
+	} else {
+		stop(paste0("unknown database version ", params$db_version))
+	}
+} else if (params$type == "16S") {
+	SixteenS = TRUE
+	gene.presence <- readRDS(file.path(DDir, "MIDAS-gene-presence-1.2.rds"))
+	trees <- readRDS(file.path(DDir, "MIDAS_1.2-trees.rds"))
+	phyla <- intersect(names(trees), names(gene.presence))
+	taxa <- lapply(trees, function(x) x$tip.label)
+	gene.to.fxn <- fread(file.path(DDir, "family.functions"),
+		header = F)
+	colnames(gene.to.fxn) <- c("gene", "function")
+	taxonomy <- data.frame(fread(file.path(DDir,
+				"MIDAS_1.2-taxonomy.csv")),
+		stringsAsFactors = FALSE)[,-1]
 }
 
 # Read abundance, metadata files
@@ -59,7 +84,44 @@ abd.mtx <- fastread(file.path(IDir, params$abundance_file))
 metadata <- read.table(file.path(IDir, params$metadata_file),
                        row.names = 1,
                        header = TRUE)
-
+if (SixteenS) {
+  # write out input sequences
+  write.fasta(as.list(rownames(abd.mtx)),
+    paste0("Row", (1:nrow(abd.mtx))),
+    file.out = file.path(IDir, "input_seqs.fa"),
+    nbchar = 99999,
+    as.string = TRUE)
+	# map to MIDAS IDs using Burst
+  system2("burst12", args = c("-r",
+      file.path(DDir, "16s_renamed.frn"),
+      "-fr",
+      "-q",
+      file.path(IDir, "input_seqs.fa"),
+      "-i",
+      "0.985",
+      "-o",
+      file.path(IDir, "output_assignments.txt")))
+  assignments <- data.frame(fread(file.path(IDir, "output_assignments.txt")))
+  row.hits <- as.numeric(gsub("Row", "", assignments[,1]))
+  row.targets <- sapply(assignments[,2], function(x) strsplit(x, " ")[[1]][3])
+  uniq.hits <- which(count.each(row.hits) < 2)
+  rh <- row.hits[uniq.hits]
+  rt <- row.targets[uniq.hits]
+  subset.abd <- abd.mtx[rh, ]
+  urt <- unique(rt)
+  summed.uniq <- sapply(urt, function(r) {
+    w <- which(rt == r)
+    if (length(w) > 1) {
+      apply(subset.abd[w, ], 2, sum)
+    } else {
+      subset.abd[w, ]
+    }
+  }) %>% t
+  rownames(summed.uniq) <- urt
+  old.abd.mtx <- abd.mtx
+  csu <- colSums(summed.uniq)
+  abd.mtx <- apply(summed.uniq[, which(csu > 0)], 2, function(x) x / sum(x))
+}
 
 ```
 
