--- a/phylogenize-report.Rmd
+++ b/phylogenize-report.Rmd
@@ -225,6 +225,34 @@ write.table(file=file.path(ODir, "phenotype.tab"), phenotype, sep = '\t')
 
 ```
 
+Here are the same trees, but with only the mapped/observed taxa plotted:
+
+```{r subtrees, fig.width = 7, fig.height = 20, warning = FALSE, message = FALSE, results="hide", echo=FALSE}
+mapped.observed <- names(which(rowSums(abd.mtx) == 0))
+plotted.pheno.subtrees <- lapply(1:length(trees), function(tn) {
+  gg.cont.tree(keep.tips(trees[[tn]], mapped.observed),
+               phenotype,
+               cLimits = phenoLimitsPhylum[[tn]],
+               colors = phenoColors,
+               cName = paste0(names(trees)[tn], ": ", params$which_phenotype),
+               plot = FALSE)
+})
+for (ps in plotted.pheno.subtrees) {
+  rp <- ps$rphy
+  tr <- ps$tree
+  depth <- max(nodeHeights(rp))
+  tIDs <- tax.annot(ps$rphy$tip.label)
+  newtr <- (tr %<+% data.frame(
+    label = rp$tip.label,
+    label2 = tIDs,
+  )) +
+    geom_tiplab(aes(label = label2), size = 0.8) +
+    ggplot2::xlim(0, (depth * 1.5))
+  print(newtr)
+}
+names(plotted.pheno.subtrees) <- names(trees)
+```
+
 ## Associations between genes and taxa
 
 This table gives an overview of how many genes were significantly associated at
