--- a/phylogenize-report.Rmd
+++ b/phylogenize-report.Rmd
@@ -270,7 +270,7 @@ write.table(file=file.path(ODir, "phenotype.tab"), phenotype, sep = '\t')
 Here are the same trees, but with only the mapped/observed taxa plotted:
 
 ```{r subtrees, fig.width = 7, fig.height = 20, warning = FALSE, message = FALSE, results="hide", echo=FALSE, fig.keep = 'none', fig.ext='svg', custom.plot=TRUE, fig.num=nphyla}
-mapped.observed <- names(which(rowSums(abd.mtx) == 0))
+mapped.observed <- names(which(rowSums(abd.mtx) > 0))
 plotted.pheno.subtrees <- lapply(1:length(trees), function(tn) {
   gg.cont.tree(keep.tips(trees[[tn]], mapped.observed),
                phenotype,
@@ -299,6 +299,7 @@ for (pn in 1:length(plotted.pheno.subtrees)) {
     pheno = 100*logistic(phenotype),
     units="%",
     pheno.name = params$which_phenotype)
+
 }
 names(plotted.pheno.subtrees) <- names(trees)
 ```
